# opengl_starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
